[refs #109061] Fix title overlaping print button issue.

--- a/land/copernicus/theme/skins/copernicus_theme_styles/redesign-app.css
+++ b/land/copernicus/theme/skins/copernicus_theme_styles/redesign-app.css
@@ -6968,6 +6968,7 @@ footer .text {
 article.main #parent-fieldname-title {
   font-size: 24px;
   margin-top: 0px;
+  padding-right: 80px;
 }
 
 .event-date {
